ApiDoesUserExist: add actual implementation
Having gone more slowly through the reasoning behind checking for hidden users
on the special page, here we can just add that logic from the start. Since
there is also less to really do (no HTML output) no need to split this up into
multiple commits to step through individually.

--- a/i18n/api/en.json
+++ b/i18n/api/en.json
@@ -4,5 +4,6 @@
             "Daniel Scherzer"
         ]
     },
-    "apihelp-doesuserexist-summary": "Check if one or more users exist"
+    "apihelp-doesuserexist-summary": "Check if one or more users exist",
+    "apihelp-doesuserexist-param-username": "Username to check"
 }
