ApiDoesUserExist: add examples
Add examples of a user existing, existing but with the requested name needing
to be normalized, and not existing. These examples assume that the user
"MediaWiki default" will always exist (since it is used by the installer) and
that the user "Foo/bar" will never exist (since it has a slash and should be
treated as invalid).

--- a/i18n/api/qqq.json
+++ b/i18n/api/qqq.json
@@ -5,5 +5,8 @@
         ]
     },
     "apihelp-doesuserexist-summary": "{{doc-apihelp-summary|doesuserexist}}",
-    "apihelp-doesuserexist-param-username": "{{doc-apihelp-param|doesuserexist|username}}"
+    "apihelp-doesuserexist-param-username": "{{doc-apihelp-param|doesuserexist|username}}",
+    "apihelp-doesuserexist-example-mwdefault-exists": "{{doc-apihelp-example|doesuserexist}}",
+    "apihelp-doesuserexist-example-mwdefault-normalized": "{{doc-apihelp-example|doesuserexist}}",
+    "apihelp-doesuserexist-example-invalid-slash": "{{doc-apihelp-example|doesuserexist}}"
 }
