--- a/i18n/api/en.json
+++ b/i18n/api/en.json
@@ -5,5 +5,8 @@
         ]
     },
     "apihelp-doesuserexist-summary": "Check if one or more users exist",
-    "apihelp-doesuserexist-param-username": "Username to check"
+    "apihelp-doesuserexist-param-username": "Username to check",
+    "apihelp-doesuserexist-example-mwdefault-exists": "Check if the user <kbd>MediaWiki default</kbd> exists. This account is used by the MediaWiki installer and should always exist.",
+    "apihelp-doesuserexist-example-mwdefault-normalized": "Check if the user <kbd>mediaWiki default</kbd> exists. This account is used by the MediaWiki installer and should always exist, but the name will be normalized to <kbd>MediaWiki default</kbd>.",
+    "apihelp-doesuserexist-example-invalid-slash": "Check if the user <kbd>Foo/bar</kbd> exists. This account name is invalid and should never exist."
 }
