ApiDoesUserExist: support checking multiple users
Make use of ParamValidator::PARAM_ISMULTI to allow checking multiple users in a
single request, and add an example for checking multiple users together.

--- a/i18n/api/qqq.json
+++ b/i18n/api/qqq.json
@@ -8,5 +8,6 @@
     "apihelp-doesuserexist-param-username": "{{doc-apihelp-param|doesuserexist|username}}",
     "apihelp-doesuserexist-example-mwdefault-exists": "{{doc-apihelp-example|doesuserexist}}",
     "apihelp-doesuserexist-example-mwdefault-normalized": "{{doc-apihelp-example|doesuserexist}}",
-    "apihelp-doesuserexist-example-invalid-slash": "{{doc-apihelp-example|doesuserexist}}"
+    "apihelp-doesuserexist-example-invalid-slash": "{{doc-apihelp-example|doesuserexist}}",
+    "apihelp-doesuserexist-example-multi": "{{doc-apihelp-example|doesuserexist}}"
 }
