ApiDoesUserExist: warn on duplicate requests
Instead of silently ignoring duplicate names, add a warning for each duplicate
name submitted. ApiErrorFormatter::addWarning() already allows multiple
warnings with the same code (in case there are multiple names each requested
multiple times) but also ignores multiple warnings with both the same code and
parameters (in case a single name is submitted three or more times).

Useful as a demonstration of adding warnings, and how those can be included in
the result without preventing the normal processing.

--- a/i18n/api/qqq.json
+++ b/i18n/api/qqq.json
@@ -9,5 +9,6 @@
     "apihelp-doesuserexist-example-mwdefault-exists": "{{doc-apihelp-example|doesuserexist}}",
     "apihelp-doesuserexist-example-mwdefault-normalized": "{{doc-apihelp-example|doesuserexist}}",
     "apihelp-doesuserexist-example-invalid-slash": "{{doc-apihelp-example|doesuserexist}}",
-    "apihelp-doesuserexist-example-multi": "{{doc-apihelp-example|doesuserexist}}"
+    "apihelp-doesuserexist-example-multi": "{{doc-apihelp-example|doesuserexist}}",
+    "apiwarn-doesuserexist-duplicate-request": "{{doc-apierror}}\n\nParameters:\n* $1 - a name requested multiple times"
 }
