--- a/i18n/api/en.json
+++ b/i18n/api/en.json
@@ -9,5 +9,6 @@
     "apihelp-doesuserexist-example-mwdefault-exists": "Check if the user <kbd>MediaWiki default</kbd> exists. This account is used by the MediaWiki installer and should always exist.",
     "apihelp-doesuserexist-example-mwdefault-normalized": "Check if the user <kbd>mediaWiki default</kbd> exists. This account is used by the MediaWiki installer and should always exist, but the name will be normalized to <kbd>MediaWiki default</kbd>.",
     "apihelp-doesuserexist-example-invalid-slash": "Check if the user <kbd>Foo/bar</kbd> exists. This account name is invalid and should never exist.",
-    "apihelp-doesuserexist-example-multi": "Check if the users <kbd>MediaWiki default</kbd>, <kbd>mediaWiki default</kbd>, and <kbd>Foo/bar</kbd> exist, in a single request."
+    "apihelp-doesuserexist-example-multi": "Check if the users <kbd>MediaWiki default</kbd>, <kbd>mediaWiki default</kbd>, and <kbd>Foo/bar</kbd> exist, in a single request.",
+    "apiwarn-doesuserexist-duplicate-request": "Duplicate request to check the name: $1"
 }
