--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -5,6 +5,7 @@
         ]
     },
     "minimalexample-desc": "{{desc|name=MinimalExample}}",
+    "minimalexample-changecontentmodel-cache-note": "Note shown on [[Special:ChangeContentModel]] about outdated versions of <code><nowiki>{{PAGECONTENTMODEL:}}</nowiki></code>.",
     "doesuserexist": "{{doc-special|DoesUserExist}}",
     "doesuserexist-summary": "Summary of the special page [[Special:DoesUserExist]]",
     "doesuserexist-username-input": "Label for the username field on [[Special:DoesUserExist]]",
