Add an option to hide the note on Special:ChangeContentModel
Serves as an example of registering user options. This may not be the most
useful preference to add for a real extension, since content models are
generally rarely changed and the note is not very big, and every new preference
adds complexity. See the essay [[Just make it a user preference]] on
MediaWiki.org for a good explanation of the problems new preferences can pose.
But, it is a reasonable preference for this example extension and a good
demonstration of how preferences are added.

--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -6,6 +6,7 @@
     },
     "minimalexample-desc": "{{desc|name=MinimalExample}}",
     "minimalexample-changecontentmodel-cache-note": "Note shown on [[Special:ChangeContentModel]] about outdated versions of <code><nowiki>{{PAGECONTENTMODEL:}}</nowiki></code>.",
+    "minimalexample-changecontentmodel-pref-label": "Used as a label for the checkbox in the \"editing\" tab on [[Special:Preferences]].",
     "doesuserexist": "{{doc-special|DoesUserExist}}",
     "doesuserexist-summary": "Summary of the special page [[Special:DoesUserExist]]",
     "doesuserexist-username-input": "Label for the username field on [[Special:DoesUserExist]]",
