--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -5,6 +5,7 @@
         ]
     },
     "minimalexample-desc": "{{desc|name=MinimalExample}}",
+    "content-model-markdown": "{{optional}}Name of the markdown content model",
     "doesuserexist": "{{doc-special|DoesUserExist}}",
     "doesuserexist-summary": "Summary of the special page [[Special:DoesUserExist]]",
     "doesuserexist-username-input": "Label for the username field on [[Special:DoesUserExist]]",
