Syntax help: save work (special page)
Special page works to configure help pages

--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -8,6 +8,9 @@
     "content-model-markdown": "{{optional}}Name of the markdown content model",
     "minimalexample-changecontentmodel-cache-note": "Note shown on [[Special:ChangeContentModel]] about outdated versions of <code><nowiki>{{PAGECONTENTMODEL:}}</nowiki></code>.",
     "minimalexample-changecontentmodel-pref-label": "Used as a label for the checkbox in the \"editing\" tab on [[Special:Preferences]].",
+    "configuresyntaxhelp": "{{doc-special|ConfigureSyntaxHelp}}",
+    "configuresyntaxhelp-model": "Label for a help page field on [[Special:ConfigureSyntaxHelp]].\n\nParameters:\n* $1 - the name of the content model",
+    "configuresyntaxhelp-saved": "Success message on [[Special:ConfigureSyntaxHelp]].",
     "doesuserexist": "{{doc-special|DoesUserExist}}",
     "doesuserexist-summary": "Summary of the special page [[Special:DoesUserExist]]",
     "doesuserexist-username-input": "Label for the username field on [[Special:DoesUserExist]]",
