--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -11,6 +11,7 @@
     "configuresyntaxhelp": "{{doc-special|ConfigureSyntaxHelp}}",
     "configuresyntaxhelp-model": "Label for a help page field on [[Special:ConfigureSyntaxHelp]].\n\nParameters:\n* $1 - the name of the content model",
     "configuresyntaxhelp-saved": "Success message on [[Special:ConfigureSyntaxHelp]].",
+    "syntaxhelp-help-label": "Syntax help",
     "doesuserexist": "{{doc-special|DoesUserExist}}",
     "doesuserexist-summary": "Summary of the special page [[Special:DoesUserExist]]",
     "doesuserexist-username-input": "Label for the username field on [[Special:DoesUserExist]]",
