--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -21,5 +21,8 @@
 	"doesuserexist-does-not-exist": "Message shown when no user exists with the given name.\n\nParameters:\n* $1 - the requested name",
 	"doesuserexist-exists-exact": "Message shown when a user exists with exactly the given name.\n\nParameters:\n* $1 - the requested name",
 	"doesuserexist-exists-normalized": "Message shown when a user exists with the normalized form of the given name.\n\nParameters:\n* $1 - the normalized name\n* $2 - the requested name",
-	"doesuserexist-exists-hidden": "Message shown to privileged users when a user exists but is hidden."
+	"doesuserexist-exists-hidden": "Message shown to privileged users when a user exists but is hidden.",
+	"right-edit-extra-details": "{{doc-right|edit-extra-details}}",
+	"action-edit-extra-details": "{{doc-action|edit-extra-details}}",
+	"extradetails-render-not-wikitext": "Error message for non-wikitext extra details slots.\n\nParameters:\n* $1 - content model of the extra details slot"
 }
